    combinations at submission time
 -- Add new DebugFlags option 'JobComp' to replace 'Elasticsearch'.
 -- sacct - Add --array option to expand job arrays and display array tasks on
    separate lines.
 -- Fix jobs submitted with a deadline never being cleared after the
    reservation is done.
 -- Change srun/salloc to wait indefinitely for their allocations to be ready.

* Changes in Slurm 22.05.7
==========================
 -- Fix slurmctlds in a federation not recovering a lost connection until a
    slurmctld restart or a federation update.
 -- Fix incorrectly rejecting jobs that request GRES on multiple sockets and
    --gres-flags=enforce-binding.
 -- Fix job core selection with --gres-flags=enforce-binding: this fixes cases
    where enforce-binding was not respected.
 -- openapi/v0.0.38 - set assoc_id resolution failure as a debug log instead of
    an error log.
 -- Fix issues when running in FrontEnd mode.
 -- Fix srun and salloc I/O code to set keepaliveinterval/keepalivetime on
    connections.
 -- Fix overwrite race of cont_id in cgroup/v2 when using task/cgroup with
    proctrack/cray_aries.
 -- Fix node remaining allocated after a reconfig with a completing job that
    has an EpilogSlurmctld instance still running.
 -- openapi/dbv0.0.38 - fix a cast to a wrong type
 -- openapi/dbv0.0.38 - correct issues where modifying association fields were
    ignored.
 -- openapi/dbv0.0.38 - correct issue where 16 bit integers were not able to be
    unset.
 -- openapi/dbv0.0.38 - correct issue where 16 & 32 bit integers were not able
    to be unset.
 -- Fix 'scontrol show hostlist' to read off a pipe correctly.
 -- Fix 'scontrol reconfigure' with configless enabled to send updated configs
    to 21.08 nodes correctly. (22.05 nodes are unaffected.)
 -- Fix assertion and locks for dynamic node registrations with rpc queueing.
 -- rest_auth/local - avoid logging root access as an error but instead as a
    normal info log.